--- a/client/doodle.html
+++ b/client/doodle.html
@@ -13,7 +13,7 @@
         <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
-          <span class="icon-bar"></span>ss
+          <span class="icon-bar"></span>
         </a>
         <a class="brand" href="/">Meteor Doodle</a>
         <div class="nav-collapse">
@@ -76,7 +76,7 @@
   <form class="well form-search">
   <p><input type="text" id="title" placeholder="Event title">
   <input type="text" id="location" placeholder="Location (e.g. 1600 American Dream Way, Reston, VA 20122)">
-  <a id="btnSend" value="Add Event" class="btn btn-primary">
+  <a id="btnAddEvent" value="Add Event" class="btn btn-primary">
   	<i class="icon-calendar icon-white"/>Add Event</a>
   </form>	
 </template>
@@ -114,12 +114,35 @@
 	  <div class="title">{{selected_apt.title}}</div>
 	  <span class="location">{{selected_apt.location}}</span>
 	  <hr>
-	  <input type="button" class="btn" value="Invite Attendees" />
+	  <input type="button" class="btn" value="Attendees" />
 	  <input type="button" class="btn" value="Edit Event Details" />
+	  <button type="button" name="btnTimeSlots" class="btn" data-toggle="modal" data-target="#timeProposalModal">Time Proposals</button>
 	</div>
   {{/if}}
 
   {{#unless selected_apt}}
     <div>Click an event to view details</div>
   {{/unless}}
+  
+  
+  <!-- Time Proposals Modal -->
+  <div id="timeProposalModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-header">
+      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">x</button>
+      <h3 id="myModalLabel">Manage Time Proposals</h3>
+    </div>
+  
+    <div class="modal-body">
+      <span>New time proposal:</span><input type="text" id="proposalDate" placeholder="Proposal date">
+      <input type="text" id="proposalTime" placeholder="Proposal time">
+      <a id="btnAddTimeProposal" value="Add Proposal" class="btn btn-primary btn-small">
+  	    <i class="icon-time icon-white"/>Add Proposal</a>
+    </div>
+    
+    <div class="modal-footer">
+      <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+      <button class="btn btn-primary">Save changes</button>
+    </div>
+</div>
+  
 </template>
