Added rating widget. Does not work yet.

--- a/client/invite.html
+++ b/client/invite.html
@@ -48,5 +48,6 @@
   <strong>Date: </strong><span>{{date}}</span>:<span>{{time}}</span>
   <strong>Votes: </strong><span>{{votes}}</span>
   <a href="#" id="btnVoteTimeProposal">Vote!</a>
+     <div class="rateit" data-rateit-value="{{votes}}" id="rate_{{_id}}"></div>
   <br/>
 </template>
