Added rating stars

--- a/client/invite.html
+++ b/client/invite.html
@@ -45,9 +45,10 @@
 </template>
 
 <template name="invitetimeproposal">
+  <strong>Id: </strong><span>{{_id}}</span>
   <strong>Date: </strong><span>{{date}}</span>:<span>{{time}}</span>
   <strong>Votes: </strong><span>{{votes}}</span>
   <a href="#" id="btnVoteTimeProposal">Vote!</a>
-     <div class="rateit" data-rateit-value="{{votes}}" id="rate_{{_id}}"></div>
+     <div class="rateit" data-rateit-value="{{avgrating}}" id="{{_id}}"></div>(avg: {{avgrating}})
   <br/>
 </template>
