--- a/client/invite.html
+++ b/client/invite.html
@@ -90,7 +90,7 @@
 	<div class="page-header">
 		<h1>You're done!</h1>
 		<div class="alert alert-success">
-			<strong>Thank you for casting your vote!</strong><br/> The event organizer will surely appreciate your time. You can use the form below to forward this event to invite others to vote.
+			<strong>Thank you for casting your vote!</strong><br/> The event organizer will appreciate your time. You can use the form below to forward this event to invite others to vote.
         </div>
 
 		<h2>Invite more people</h2>
