Added editing capability to time proposals

--- a/client/invite.html
+++ b/client/invite.html
@@ -13,7 +13,6 @@
 			      <address>
 			        <strong>Location</strong><br>
 			        {{selected.location}}<br>
-			        <abbr title="Phone">P:</abbr> (123) 456-7890
 			      </address>
                </div>
              </div>
@@ -97,8 +96,7 @@
 		<form class="well form-search">
 	  		<p><input type="text" id="name" placeholder="e.g. Monica Jonhson">
 			<input type="text" id="email" placeholder="e.g. monica@email.com">
-			<a id="btnAddAttendee" value="Send Invitaion" class="btn btn-primary">
-				<i class="icon-envelope icon-white"/>Send Invitation</a>
+			<a id="btnAddAttendee" value="Send Invitaion" class="btn btn-primary">Send Invitation</a>
 		</form>	
 	  
     </div>
