--- a/client/index.html
+++ b/client/index.html
@@ -63,7 +63,7 @@
 	            <li><a href="#">Sign Up Free</a></li>
 	          </ul>
 	          
-	          <ul class="nav pull-right">
+	          <ul class="nav pull-right right-fix">
 	            <li><a href="#">{{loginButtons}}</a></li>
 	          </ul>
 	          
