Added sending of single invite

--- a/client/index.html
+++ b/client/index.html
@@ -211,7 +211,7 @@
   			<strong>{{name}}</strong><br/>
 			<small><a href="#">{{email}}</a></small><br/>
 			Invited: <strong>{{invited}}</strong> Voted: <strong>{{voted}}</strong><br/>
-			<small><a href="#" class="linkDeleteAttendee">Delete</a> | <a href="#" class="linkEditAttendee">Edit</a> | <a href="#" class="linkSendInvitation">Send Invitation</a></small>
+			<small><a href="#" class="linkDeleteAttendee">Delete</a> | <a href="#" class="linkEditAttendee">Edit</a> | <a href="#" class="linkSendOneInvite">Send Invite</a></small>
 
 		{{/unless }}
 		
