Added JQuery notifications

--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,8 @@
 	<meta name="description" content="Maria is your meeting assistant for for scheduling meetings, events and  appointments. Maria is smart, quick, and free. Simply set up a poll, send a link to all invitees, watch progress online, and finally choose the most suitable date." />
 	<meta name="copyright" content="Company, Inc." />
 	<meta name="application-name" content="Maria" />
+	<link href="jquery_notification.css" type="text/css" rel="stylesheet"/>
+	<script type="text/javascript" src="jquery_notification_v.1.js"></script>
 </head>
 
 <body>
@@ -17,21 +19,22 @@
 </body>
    
 <template name="homepage">
-  	{{#if showCreateDialog }}
-    	{{> createDialog }}
+  
+  {{#if showCreateDialog }}
+    {{> createDialog }}
 	{{/if}}
 
-  	{{#if showUpdateAppointmentDialog }}
-    	{{> updateAppointmentDialog }}
+  {{#if showUpdateAppointmentDialog }}
+    {{> updateAppointmentDialog }}
 	{{/if}}
 
-  	{{#if showTimeProposalsDialog }}
-    	{{> timeProposalsDialog }}
+  {{#if showTimeProposalsDialog }}
+    {{> timeProposalsDialog }}
 	{{/if}}
   
-  	{{#if showAttendeesDialog }}
-    	{{> attendeesDialog }}
-  	{{/if}}
+  {{#if showAttendeesDialog }}
+    {{> attendeesDialog }}
+  {{/if}}
   
 	{{> header }}
   
