--- a/client/index.html
+++ b/client/index.html
@@ -150,8 +150,8 @@
 		        {{selected.location}}<br>
 		      </address>
 			
-			<strong>Link</strong><br>
-			<a href="{{path}}">{{path}}</a>
+			    <strong>Link</strong><br>
+			    <a href="{{path}}" id="linkEvent">{{path}}</a>
 			  
 			  <!-- Time Proposals -->
 			  {{#if anyTimeProposal }}
