Updated error message

--- a/client/invite.html
+++ b/client/invite.html
@@ -64,7 +64,7 @@
 	
 	{{#unless selected }}
         <div class="alert alert-error">
-          <strong>Something went wrong!</strong><br/> We apologize for the inconvenience, but the event you're looking for cannot be found or is no longer available. Please contact the person who sent the event invitation and request a new link. 
+          <strong>Event not found.</strong><br/> We apologize, but the event you're looking for cannot be found or is no longer available. Please contact the person who sent the event invitation and request a new link. 
         </div>
 	{{/unless }}
 	</div>
