Added tracking capability. Half-working

--- a/client/index.html
+++ b/client/index.html
@@ -146,8 +146,11 @@
 		        {{selected.location}}<br>
 		      </address>
 			
-			    <strong>Link</strong><br>
+			    <strong>Event Link</strong><br>
 			    <a href="{{path}}" id="linkEvent">{{path}}</a>
+			    <br><br>
+			    <strong>Tracking Link</strong><br>
+			    <a href="{{tracking}}" id="linkEvent">{{tracking}}</a>
 			  
 			  <!-- Time Proposals -->
 			  {{#if anyTimeProposal }}
