--- a/client/index.html
+++ b/client/index.html
@@ -218,7 +218,8 @@
 		{{#unless editattendee}}
   			<strong>{{name}}</strong><br/>
 			<small><a href="#">{{email}}</a></small><br/>
-			Invited: <strong>{{invited}}</strong> Voted: <strong>{{voted}}</strong><br/>
+			Invited: <strong>{{invited}}</strong> Read email: <strong>{{emailread}}</strong><br>
+			Link clicked: <strong>{{linkclicked}}</strong>  Voted: <strong>{{voted}}</strong><br/>
 			<small><a href="#" class="linkDeleteAttendee">Delete</a> | <a href="#" class="linkEditAttendee">Edit</a> | <a href="#" class="linkSendOneInvite">Send Invite</a></small>
 
 		{{/unless }}
