Added box image on the home page

--- a/client/index.html
+++ b/client/index.html
@@ -289,8 +289,12 @@
         </div>
         
         <div class="span3">
-          <h4>Powerful analytics</h4>
-          <img >
+          <div class="homebox">
+            <div class="curve-down">
+          			<a href="#" class="promo4"><img width="216" height="100" alt="Powerful Analytics" src="/img/homebox-4.png"></a>
+          		</div>
+          </div>
+          <br>
           <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa.</p>
           <p><a class="btn" href="#">View details &raquo;</a></p>
         </div>
