--- a/client/index.html
+++ b/client/index.html
@@ -56,7 +56,7 @@
 	  <div class="navbar navbar-inverse">
 	    <div class="navbar-inner">
 	      <div class="container" style="width: auto;">
-	      <a class="brand" href="/">Maria</a>
+	        <a class="toplogo brand" href="/">Maria</a>
 	        <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
 	          <span class="icon-bar"></span>
 	          <span class="icon-bar"></span>
@@ -84,7 +84,13 @@
 
 <template name="footer">
  <div class="footer">
-    <p>&copy; Company & Company 2013</p>
+    <div class="row">
+      <div class="span12"><a class="bottomlogo" href="/" title="Home"/>
+      <p>&copy; Maria Meeting Scheduling, LLC. 2013</p>  
+      </div>
+    </div>
+
+    
   </div>
 </template>
 
@@ -277,7 +283,7 @@
     <!-- Jumbotron -->
       <div class="jumbotron">
         <h1>Simple meetings!</h1>
-        <p class="lead">Maria helps you organize better meetings by drastically reducing the time to design an event, create on a schedule and confirm attendance. Maria is fast and easy to use. Best of all, it's FREE.</p>
+        <p class="lead">Maria helps you organize better meetings by drastically reducing the time to design an event, create a schedule and track attendance. Maria is fast and easy to use. Best of all, it's FREE.</p>
         <a class="btn btn-large btn-success" href="#">Get started today</a>
       </div>
 
@@ -289,7 +295,7 @@
           <div class="homeboxclean">
             <h3>Increase Attendance</h3>
             <div class="svgwrap"><img alt="Increase Attendence" src="/img/homebox-1.svg"></div>
-            <p>Maria helps you find the best times for your meetings and events. Whether you're organizing a lunch or a company outing, Maria's event management tools save you time and help you put together the perfect event schedule for all attendees.</p>
+            <p>Whether you're organizing a casual lunch or a company meeting, Maria helps you find the best times for your attendees. By using Maria's easy event polls its easier than ever to collect feedback and put together the perfect event schedule. The result is increased attendance and more effective meetings.</p>
           </div>
           
           <p><a class="btn" href="#">Create an event &raquo;</a></p>
@@ -298,13 +304,13 @@
           <div class="homeboxclean">
             <h3>Improve Productivity</h3>
             <div class="svgwrap"><img alt="Save Time and Money" src="/img/homebox-2.svg"></div>
-            <p>Maria puts you at the center by eliminating unnecessary lines of communication and turning you into a communications hub. Simple time proposals cut down the wasted time, emails and phone calls and provide an easy way for all attendees to agree on a meeting schedule.</p>
+            <p>Get ready for some attention! By eliminating unnecessary lines of communication and collecting all information in one central place you will cut down on hours of time, countless emails and phone calls. The outcome will be fewer schedule conflicts and more productive meetings.</p>
           </div>
           <p><a class="btn" href="#">View details &raquo;</a></p>
        </div>
         <div class="span3">
           <div class="homeboxclean">
-            <h3>Gain Insights</h3>
+            <h3>Gain Insight</h3>
             <div class="svgwrap"><img alt="Powerful Analytics" src="/img/homebox-3.svg"></div>
             <p>Maria helps you find the best suitable times for your meetings and events. Whether you're organizing a lunch or a company outing, Maria's event management tools will save you time and help you find the best suitable time for all attendees.</p>
           </div>
@@ -329,7 +335,7 @@
 </template>
 
 <template name="updateAppointmentDialog">
-  <div class="mask"> </div>
+  <div class="mask"></div>
   <div class="modal">
     <div class="modal-header">
       <button type="button" class="close done">&times;</button>
@@ -355,7 +361,7 @@
           	</div>
 
 			<label class="control-label" for="input01">Description</label>
-          	<div class="controls">
+      <div class="controls">
 				<textarea rows="5" id="txtdescription" class="input-xlarge">{{selected.description}}</textarea>
 			</div>
 			
