Wired "Get Started Today" button

--- a/client/index.html
+++ b/client/index.html
@@ -364,7 +364,7 @@
       <div class="jumbotron">
         <h1>Simple meetings!</h1>
         <p class="lead">Maria helps you organize better meetings by drastically reducing the time to design an event, create a schedule and track attendance. Maria is fast and easy to use. Best of all, it's FREE.</p>
-        <a class="btn btn-large btn-success" href="#">Get started today</a>
+        <a class="btn btn-large btn-success" href="#" id="linkGetStartedToday">Get started today</a>
       </div>
 
       <hr>
