Added login screen to homepage wizard

--- a/client/index.html
+++ b/client/index.html
@@ -153,7 +153,8 @@
   
     <div class="hiddenWizardStepOne">
       <div class="wizardPaneStepOne">
-       <h1>This is Step 1 of The Wizard</h1>
+       <h1>Step One: Create an Event</h1>
+        {{> homewizlogin}}
      </div>
    </div>
   
