Added styled form elements for home page wizard. Work in progress

--- a/client/index.html
+++ b/client/index.html
@@ -152,9 +152,18 @@
   	</div>
   
     <div class="hiddenWizardStepOne">
-      <div class="wizardPaneStepOne">
-       <h1>Step One: Create an Event</h1>
-        {{> homewizlogin}}
+      <div class="row">
+        <div class="span12">
+          <div class="wizardPaneStepOne">
+            <h1>Step One: Create an Event</h1>
+            <div class="span5">
+              {{> homewizlogin}}
+            </div>
+            <div class="span5">
+              {{> homewizcreateevent}}
+            </div>
+          </div>
+       </div>
      </div>
    </div>
   
