--- a/client/index.html
+++ b/client/index.html
@@ -153,13 +153,10 @@
   
     <div class="hiddenWizardStepOne">
       <div class="row">
-        <div class="span12">
+        <div class="span2"></div>
+        <div class="span8">
           <div class="wizardPaneStepOne">
-            <h1>Step One: Create an Event</h1>
-            <div class="span5">
-              {{> homewizlogin}}
-            </div>
-            <div class="span5">
+            <div class="span7">
               {{> homewizcreateevent}}
             </div>
           </div>
@@ -372,7 +369,7 @@
   <div>
     <!-- Jumbotron -->
       <div class="jumbotron">
-        <h1>Simple meetings!</h1>
+        <h1>Simple events!</h1>
         <p class="lead">Maria helps you organize better meetings by drastically reducing the time to design an event, create a schedule and track attendance. Maria is fast and easy to use. Best of all, it's FREE.</p>
         <a class="btn btn-large btn-success" href="#" id="linkGetStartedToday">Get started today</a>
       </div>
@@ -446,16 +443,16 @@
           	</div>
           
           	<label class="control-label" for="location">Location</label>
-			<div class="controls">
-				<textarea rows="3" id="txtlocation" class="input-xlarge">{{selected.location}}</textarea>
+			      <div class="controls">
+				      <textarea rows="3" id="txtlocation" class="input-xlarge">{{selected.location}}</textarea>
           	</div>
 
-			<label class="control-label" for="input01">Description</label>
-      <div class="controls">
-				<textarea rows="5" id="txtdescription" class="input-xlarge">{{selected.description}}</textarea>
-			</div>
+			      <label class="control-label" for="input01">Description</label>
+            <div class="controls">
+      				<textarea rows="5" id="txtdescription" class="input-xlarge">{{selected.description}}</textarea>
+      			</div>
 			
-			<label class="control-label" for="input01">Time proposal type</label>
+      			<label class="control-label" for="input01">Time proposal type</label>
           	<div class="controls">
 				<select id="proposalType" class="input-medium">
 					<option value="1">Yes/No</option>
