Added anonymous events model and collection

--- a/client/index.html
+++ b/client/index.html
@@ -370,7 +370,7 @@
     <!-- Jumbotron -->
       <div class="jumbotron">
         <h1>Simple events!</h1>
-        <p class="lead">Maria helps you organize better meetings by drastically reducing the time to design an event, create a schedule and track attendance. Maria is fast and easy to use. Best of all, it's FREE.</p>
+        <p class="lead">Maria helps you organize better events by drastically reducing the time to design the event, create a schedule and track attendance. Maria is fast and easy to use. Best of all, it's FREE.</p>
         <a class="btn btn-large btn-success" href="#" id="linkGetStartedToday">Get started today</a>
       </div>
 
