Selected step button to remain active during step

--- a/client/index.html
+++ b/client/index.html
@@ -86,8 +86,8 @@
        <div class="container clearfix" id="homenavigation">
          <div class="row">
            <div class="ca-menu">
-           <ul class="heyo">
-               <li>
+           <ul>
+               <li id="liStepOne">
                    <a href="#" id="linkHomeNavCreateEvent">
                        <span class="ca-icon">?</span>
                        <div class="ca-content">
