--- a/client/index.html
+++ b/client/index.html
@@ -96,7 +96,7 @@
                        </div>
                    </a>
                </li>
-               <li>
+               <li id="liStepTwo">
                    <a href="#">
                        <span class="ca-icon">P</span>
                        <div class="ca-content">
@@ -105,7 +105,7 @@
                        </div>
                    </a>
                </li>
-               <li>
+               <li id="liStepThree">
                    <a href="#">
                        <span class="ca-icon">U</span>
                        <div class="ca-content">
@@ -114,7 +114,7 @@
                        </div>
                    </a>
                </li>
-               <li>
+               <li id="liStepFour">
                    <a href="#">
                        <span class="ca-icon">@</span>
                        <div class="ca-content">
@@ -123,7 +123,7 @@
                        </div>
                    </a>
                </li>
-               <li>
+               <li id="liStepFive">
                  <a href="#">
                      <span class="ca-icon">u</span>
                      <div class="ca-content">
@@ -131,7 +131,7 @@
                          <h3 class="ca-sub">24/7 for you needs</h3>
                      </div>
                  </a>
-                 <li>
+                 <li id="liStepSix">
                      <a href="#">
                          <span class="ca-icon">N</span>
                          <div class="ca-content">
@@ -151,13 +151,17 @@
         </div>
   	</div>
   
-    <div class="hiddenWizardStepOne">
+    <div class="wizardPane">
+
       <div class="row">
         <div class="span2"></div>
         <div class="span8">
-          <div class="wizardPaneStepOne">
+          <div class="wizardPaneStep">
             <div class="span7">
-              {{> homewizcreateevent}}
+
+                {{> homewizstepone}}
+                {{> homewizsteptwo}}
+
             </div>
           </div>
        </div>
