Homepage wizard transitions

--- a/client/index.html
+++ b/client/index.html
@@ -87,7 +87,7 @@
          <div class="row">
            <div class="ca-menu">
            <ul>
-               <li id="liStepOne">
+               <li id="lione">
                    <a href="#" id="linkHomeNavCreateEvent">
                        <span class="ca-icon">?</span>
                        <div class="ca-content">
@@ -96,7 +96,7 @@
                        </div>
                    </a>
                </li>
-               <li id="liStepTwo">
+               <li id="litwo">
                    <a href="#">
                        <span class="ca-icon">P</span>
                        <div class="ca-content">
@@ -105,7 +105,7 @@
                        </div>
                    </a>
                </li>
-               <li id="liStepThree">
+               <li id="lithree">
                    <a href="#">
                        <span class="ca-icon">U</span>
                        <div class="ca-content">
