Added empty home page wizard steps

--- a/client/index.html
+++ b/client/index.html
@@ -159,8 +159,12 @@
           <div class="wizardPaneStep">
             <div class="span7">
 
-                {{> homewizstepone}}
-                {{> homewizsteptwo}}
+                {{> homewizone}}
+                {{> homewiztwo}}
+                {{> homewizthree}}
+                {{> homewizfour}}
+                {{> homewizfive}}
+                {{> homewizsix}}
 
             </div>
           </div>
