Added deployment logs functionality

--- a/client/index.html
+++ b/client/index.html
@@ -114,7 +114,7 @@
                        </div>
                    </a>
                </li>
-               <li id="liStepFour">
+               <li id="lifour">
                    <a href="#">
                        <span class="ca-icon">@</span>
                        <div class="ca-content">
@@ -123,7 +123,7 @@
                        </div>
                    </a>
                </li>
-               <li id="liStepFive">
+               <li id="lifive">
                  <a href="#">
                      <span class="ca-icon">u</span>
                      <div class="ca-content">
@@ -131,7 +131,7 @@
                          <h3 class="ca-sub">24/7 for you needs</h3>
                      </div>
                  </a>
-                 <li id="liStepSix">
+                 <li id="lisix">
                      <a href="#">
                          <span class="ca-icon">N</span>
                          <div class="ca-content">
@@ -177,14 +177,14 @@
 </template>
 
 <template name="footer">
- <div class="footer">
+  <div class="footer">
     <div class="row">
       <div class="span12"><a class="bottomlogo" href="/" title="Home"/>
-      <p>&copy; Maria Meeting Scheduling, LLC. 2013</p>  
+        <p>&copy; Maria Meeting Scheduling, LLC. 2013</p>
+        <p>Last deployed: {{lastdeployed}}</p>
+        <p>Revision: {{revision}}</p>
       </div>
     </div>
-
-    
   </div>
 </template>
 
