Fixed homepage slider defect

--- a/client/index.html
+++ b/client/index.html
@@ -383,7 +383,7 @@
       <div class="jumbotron">
         <h1>Simple events!</h1>
         <p class="lead">Maria helps you organize better events by drastically reducing the time to design the event, create a schedule and track attendance. Maria is fast and easy to use. Best of all, it's FREE.</p>
-        <a class="btn btn-large btn-success" href="#" id="linkGetStartedToday">Get started today</a>
+        <a class="btn btn-large btn-success linkhome" href="#" id="one">Get started today</a>
       </div>
 
       <hr>
@@ -397,7 +397,7 @@
             <p>Whether you're organizing a casual lunch or a company meeting, Maria helps you find the best times for your attendees. By using Maria's easy event polls its easier than ever to collect feedback and put together the perfect event schedule. The result is increased attendance and more effective meetings.</p>
           </div>
           
-          <p><a class="btn" href="#">Create an event &raquo;</a></p>
+          <p><a class="btn linkhome" href="#" id="oneextra">Create an event &raquo;</a></p>
         </div>
         <div class="span3">
           <div class="homeboxclean">
@@ -405,7 +405,7 @@
             <div class="svgwrap"><img alt="Save Time and Money" src="/img/homebox-2.svg"></div>
             <p>Get ready for some attention! By eliminating unnecessary lines of communication and collecting all information in one central place you will cut down on hours of time, countless emails and phone calls. The outcome will be fewer schedule conflicts and more productive meetings.</p>
           </div>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
+          <p><a class="btn linkhome" href="#" id="two">View details &raquo;</a></p>
        </div>
         <div class="span3">
           <div class="homeboxclean">
@@ -413,7 +413,7 @@
             <div class="svgwrap"><img alt="Powerful Analytics" src="/img/homebox-3.svg"></div>
             <p>Maria helps you find the best suitable times for your meetings and events. Whether you're organizing a lunch or a company outing, Maria's event management tools will save you time and help you find the best suitable time for all attendees.</p>
           </div>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
+          <p><a class="btn linkhome" href="#" id="three">View details &raquo;</a></p>
         </div>
         
         <div class="span3">
