--- a/client/homewizard.html
+++ b/client/homewizard.html
@@ -102,6 +102,8 @@
   </div>
 </template>
 
+
+
 <!-- Wizard: Step Four -->
 <template name="homewizfour">
   <div id="homewizfour">
@@ -149,7 +151,9 @@
         </li>
         
         <li>
+
           <div class="centerbutton">
+            <p>Event link: {{eventlink}}</p>
             <a class="btn btn-small btn-info" href="#" id="preview">
               <i class="icon-edit"></i> Preview Invitation</a>
               <a class="btn btn-small btn-success" href="#" id="send">
@@ -166,7 +170,9 @@
     <a href="#" class="btn btn-primary" id="next" tabindex="410">Next</a>
   </div>
 </template>
-      
+
+
+
 <!-- Wizard: Step Five -->
 <template name="homewizfive">
   <div id="homewizfive">
