Working on home page wizard

--- a/client/content.html
+++ b/client/content.html
@@ -20,15 +20,43 @@
   {{> header }}
   <div class="container topdrop">
 	  <h1>Features</h1>
-	  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-	  
-	  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-	  
-	  
-	  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-	  
-	  
-	  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	   <div class="row-fluid">
+       <div class="span3">
+         <div class="homeboxclean">
+           <h3>Increase Attendance</h3>
+           <div class="svgwrap"><img alt="Increase Attendence" src="/img/homebox-1.svg"></div>
+           <p>Whether you're organizing a casual lunch or a company meeting, Maria helps you find the best times for your attendees. By using Maria's event polling its easier than ever to collect feedback and design the perfect schedule. The result is increased attendance and more effective events.</p>
+         </div>
+
+         <p><a class="btn linkhome" href="#" id="oneextra">Create an event &raquo;</a></p>
+       </div>
+       <div class="span3">
+         <div class="homeboxclean">
+           <h3>Improve Productivity</h3>
+           <div class="svgwrap"><img alt="Save Time and Money" src="/img/homebox-2.svg"></div>
+           <p>Get ready for attention! By eliminating unnecessary lines of communication and collecting all information in one place you will save hours of coordination, countless emails and phone calls. The outcome will be fewer schedule conflicts and more productive events.</p>
+         </div>
+         <p><a class="btn linkhome" href="#" id="two">View details &raquo;</a></p>
+      </div>
+       <div class="span3">
+         <div class="homeboxclean">
+           <h3>Gain Insight</h3>
+           <div class="svgwrap"><img alt="Powerful Analytics" src="/img/homebox-3.svg"></div>
+           <p>Maria helps you find the best suitable times for your meetings and events. Whether you're organizing a lunch or a company outing, Maria's event management tools will save you time and help you find the best suitable time for all attendees.</p>
+         </div>
+         <p><a class="btn linkhome" href="#" id="three">View details &raquo;</a></p>
+       </div>
+
+       <div class="span3">
+         <div class="homeboxclean">
+           <h3>Work Anywhere</h3>
+           <div class="svgwrap"><img alt="Powerful Analytics" src="/img/homebox-4.svg"></div>
+
+           <p>Maria helps you find the best suitable times for your meetings and events. Whether you're organizing a lunch or a company outing, Maria's event management tools will save you time and help you find the best suitable time for all attendees.</p>
+         </div>
+         <p><a class="btn" href="#">View details &raquo;</a></p>
+       </div>
+     </div>
 	  
   </div>
   {{> footer }}
