--- a/client/index.html
+++ b/client/index.html
@@ -398,8 +398,8 @@
 			<li class="item">
 				<div class="ch-item ch-img-4">
 					<div class="ch-info ch-info-red">
-						<h3>Surprise Birthdays</h3>
-						<p>by Angela Duncan <a href="http://drbl.in/eOPF">View on Dribbble</a></p>
+						<h3>Profitable Sales Meetings</h3>
+						<p>The perfectly easy way to close big deals.</p>
 					</div>
 				</div>
 			</li>
@@ -416,8 +416,8 @@
 			<li class="item">
 				<div class="ch-item ch-img-3">
 					<div class="ch-info">
-						<h3>Pink Lightning</h3>
-						<p>by Charlie Wagers <a href="http://drbl.in/ekhp">View on Dribbble</a></p>
+						<h3>Smart<br> Job Interviews</h3>
+						<p>A quick and easy way to recruit a rock star.</p>
 					</div>
 				</div>
 			</li>
