Added Sublime Text project files

--- a/client/index.html
+++ b/client/index.html
@@ -398,8 +398,8 @@
 			<li class="item">
 				<div class="ch-item ch-img-4">
 					<div class="ch-info ch-info-red">
-						<h3>Profitable Sales Meetings</h3>
-						<p>The perfectly easy way to close big deals.</p>
+						<h3>Sales Meetings</h3>
+						<p>The easy way to close big deals.</p>
 					</div>
 				</div>
 			</li>
@@ -416,7 +416,7 @@
 			<li class="item">
 				<div class="ch-item ch-img-3">
 					<div class="ch-info">
-						<h3>Smart<br> Job Interviews</h3>
+						<h3>Job Interviews</h3>
 						<p>A quick and easy way to recruit a rock star.</p>
 					</div>
 				</div>
@@ -425,7 +425,7 @@
 			<li class="item">
 				<div class="ch-item ch-img-4">
 					<div class="ch-info">
-						<h3>Use what you have</h3>
+						<h3>Team Building Activities</h3>
 						<p>by Angela Duncan <a href="http://drbl.in/eOPF">View on Dribbble</a></p>
 					</div>
 				</div>
@@ -434,7 +434,7 @@
 			<li class="item">
 				<div class="ch-item ch-img-5">
 					<div class="ch-info ch-info-red">
-						<h3>Easy Conference Calls</h3>
+						<h3>Conference Calls</h3>
 						<p>Quick and stress-free conference calls.</p>
 					</div>
 				</div>
@@ -443,35 +443,8 @@
 			<li class="item">
 				<div class="ch-item ch-img-6">
 					<div class="ch-info">
-						<h3>Pink Lightning</h3>
-						<p>by Charlie Wagers <a href="http://drbl.in/ekhp">View on Dribbble</a></p>
-					</div>
-				</div>
-			</li>
-			
-			<li class="item">
-				<div class="ch-item ch-img-7">
-					<div class="ch-info">
-						<h3>Use what you have</h3>
-						<p>by Angela Duncan <a href="http://drbl.in/eOPF">View on Dribbble</a></p>
-					</div>
-				</div>
-			</li>
-
-			<li class="item">
-				<div class="ch-item ch-img-2">
-					<div class="ch-info">
-						<h3>Common Causes of Stains</h3>
-						<p>by Antonio F. Mondragon <a href="http://drbl.in/eKMi">View on Dribbble</a></p>
-					</div>
-				</div>
-			</li>
-
-			<li class="item">
-				<div class="ch-item ch-img-3">
-					<div class="ch-info">
-						<h3>Pink Lightning</h3>
-						<p>by Charlie Wagers <a href="http://drbl.in/ekhp">View on Dribbble</a></p>
+						<h3>Training Sessions</h3>
+						<p>Onsite and offsite training made easy.</p>
 					</div>
 				</div>
 			</li>
