--- a/client/index.html
+++ b/client/index.html
@@ -426,7 +426,7 @@
 				<div class="ch-item ch-img-4">
 					<div class="ch-info">
 						<h3>Team Building Activities</h3>
-						<p>by Angela Duncan <a href="http://drbl.in/eOPF">View on Dribbble</a></p>
+						<p>Get to know your employees and coworkers.</p>
 					</div>
 				</div>
 			</li>
