--- a/client/index.html
+++ b/client/index.html
@@ -396,8 +396,8 @@
     <ul class="ch-grid lovegrid linkhome">
 		  
 			<li class="item">
-				<div class="ch-item ch-img-4">
-					<div class="ch-info ch-info-red">
+				<div class="ch-item ch-img-blue">
+					<div class="ch-info">
 						<h3>Sales Meetings</h3>
 						<p>The easy way to close big deals.</p>
 					</div>
@@ -405,8 +405,8 @@
 			</li>
 
       <li class="item">
-        <div class="ch-item ch-img-8">
-          <div class="ch-info ch-info-red">
+        <div class="ch-item ch-img-green">
+          <div class="ch-info">
             <h3>Fundraising Events</h3>
             <p>Increase attendence and collect more donations.</p>
           </div>
@@ -414,8 +414,8 @@
       </li>
 			
 			<li class="item">
-				<div class="ch-item ch-img-3">
-					<div class="ch-info ch-info-red">
+				<div class="ch-item ch-img-lime-green">
+					<div class="ch-info">
 						<h3>Job Interviews</h3>
 						<p>A quick and easy way to recruit a rock star.</p>
 					</div>
@@ -423,7 +423,7 @@
 			</li>
 			
 			<li class="item">
-				<div class="ch-item ch-img-6">
+				<div class="ch-item ch-img-purple">
 					<div class="ch-info">
 						<h3>Team Building</h3>
 						<p>Get to know your employees and coworkers.</p>
@@ -432,8 +432,8 @@
 			</li>
 
 			<li class="item">
-				<div class="ch-item ch-img-2">
-					<div class="ch-info ch-info-red">
+				<div class="ch-item ch-img-red">
+					<div class="ch-info">
 						<h3>Conference Calls</h3>
 						<p>Quick and stress-free conference calls.</p>
 					</div>
@@ -441,8 +441,8 @@
 			</li>
 
 			<li class="item">
-				<div class="ch-item ch-img-7">
-					<div class="ch-info ch-info-lime-green">
+				<div class="ch-item ch-img-red">
+					<div class="ch-info">
 						<h3>Training Sessions</h3>
 						<p>Onsite and offsite training made easy.</p>
 					</div>
@@ -450,7 +450,7 @@
 			</li>
 
       <li class="item">
-        <div class="ch-item ch-img-5">
+        <div class="ch-item ch-img-purple">
           <div class="ch-info">
             <h3>Sports Activities</h3>
             <p>Easy event management for your sports league.</p>
@@ -459,8 +459,8 @@
       </li>
 
       <li class="item">
-        <div class="ch-item ch-img-9">
-          <div class="ch-info ch-info-lime-green">
+        <div class="ch-item ch-img-lime-green">
+          <div class="ch-info">
             <h3>Non-Profit Events</h3>
             <p>Simple tools for successful non-profit events.</p>
           </div>
@@ -468,8 +468,8 @@
       </li>
 			
       <li class="item">
-        <div class="ch-item ch-img-10">
-          <div class="ch-info ch-info-red">
+        <div class="ch-item ch-img-green">
+          <div class="ch-info">
             <h3>Social Gatherings</h3>
             <p>Share great moments with friends and family.</p>
           </div>
@@ -477,8 +477,8 @@
       </li>
 
       <li class="item">
-        <div class="ch-item ch-img-1">
-          <div class="ch-info ch-info-lime-green">
+        <div class="ch-item ch-img-blue">
+          <div class="ch-info">
             <h3>Surprise Birthdays</h3>
             <p>A most secret way to surprise your boss.</p>
           </div>
