Editing home page wizard

--- a/client/index.html
+++ b/client/index.html
@@ -93,19 +93,15 @@
   
     <div class="wizardPane">
       <div class="row">
-        <div class="span2"></div>
-        <div class="span8">
+        <div class="span12">
           <div class="wizardPaneStep">
-            <div class="span7">
-
-                {{> homewizone}}
-                {{> homewiztwo}}
-                {{> homewizthree}}
-                {{> homewizfour}}
-                {{> homewizfive}}
-                {{> homewizsix}}
-
-            </div>
+            {{> homewizzero}}
+            {{> homewizone}}
+            {{> homewiztwo}}
+            {{> homewizthree}}
+            {{> homewizfour}}
+            {{> homewizfive}}
+            {{> homewizsix}}
           </div>
        </div>
      </div>
