--- a/client/content.html
+++ b/client/content.html
@@ -20,8 +20,8 @@
   {{> header }}
   <div class="container topdrop">
 	  <h1>Features</h1>
-	   <div class="row-fluid">
-       <div class="span3">
+	   <div class="row">
+       <div class="col-md-3">
          <div class="homeboxclean">
            <h3>Increase Attendance</h3>
            <div class="svgwrap"><img alt="Increase Attendence" src="/img/homebox-1.svg"></div>
@@ -30,7 +30,7 @@
 
          <p><a class="btn linkhome" href="#" id="oneextra">Create an event &raquo;</a></p>
        </div>
-       <div class="span3">
+       <div class="col-md-3">
          <div class="homeboxclean">
            <h3>Improve Productivity</h3>
            <div class="svgwrap"><img alt="Save Time and Money" src="/img/homebox-2.svg"></div>
@@ -38,7 +38,7 @@
          </div>
          <p><a class="btn linkhome" href="#" id="two">View details &raquo;</a></p>
       </div>
-       <div class="span3">
+       <div class="col-md-3">
          <div class="homeboxclean">
            <h3>Gain Insight</h3>
            <div class="svgwrap"><img alt="Powerful Analytics" src="/img/homebox-3.svg"></div>
@@ -47,7 +47,7 @@
          <p><a class="btn linkhome" href="#" id="three">View details &raquo;</a></p>
        </div>
 
-       <div class="span3">
+       <div class="col-md-3">
          <div class="homeboxclean">
            <h3>Work Anywhere</h3>
            <div class="svgwrap"><img alt="Powerful Analytics" src="/img/homebox-4.svg"></div>
