fixing homepage wizard

--- a/client/index.html
+++ b/client/index.html
@@ -81,7 +81,8 @@
   
     <div class="wizardPane">
       <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-3"></div>
+        <div class="col-md-6">
           <div class="wizardPaneStep">
             {{> homewizzero}}
             {{> homewizone}}
@@ -92,6 +93,7 @@
             {{> homewizsix}}
           </div>
        </div>
+       <div class="col-md-3"></div>
      </div>
    </div>
 </template>
